# msdf-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp  msdf.c  msdf.h
